--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -17,10 +17,10 @@
 }
 
 .navbar {
-    height: 80px; /* Adjust height as needed */
+    height: 80px;
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Add space between logo and menu */
+    justify-content: space-between;
 }
 
 .logo {
@@ -43,8 +43,8 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    display: flex; /* Ensure the list items are aligned horizontally */
-    align-items: center; /* Center items vertically */
+    display: flex;
+    align-items: center;
 }
 
 nav ul li {
@@ -61,7 +61,8 @@ nav ul li a {
 .row {
     display: flex;
     align-items: center;
-    margin-top: 20px; /* Add margin to separate from navbar */
+    margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .col {
@@ -79,8 +80,6 @@ p {
     line-height: 15px;
 }
 
-
-
 .card {
     width: 200px;
     height: 230px;
@@ -89,12 +88,9 @@ p {
     padding: 15px 25px;
     box-sizing: border-box;
     cursor: pointer;
-   
     margin: 10px 15px;
-    background-image: url('pic1.png'); /* Ensure this is the correct path or URL to your image */
-    background-position: center;
     background-size: cover;
-    color: #fff; /* Assuming text inside the card should be white */
+    color: #fff;
     transition: transform 0.5s;
 }
 
@@ -106,28 +102,110 @@ p {
     font-size: 14px;
     line-height: 20px;
 }
-.card1{
+
+.card1 {
     background-image: url('pic1.png');
 }
-.card2{
+
+.card2 {
     background-image: url('pic2.png');
 }
-.card3{
+
+.card3 {
     background-image: url('pic3.png');
 }
-.card4{
+
+.card4 {
     background-image: url('pic4.png');
 }
 
-.card:hover{
+.card:hover {
     transform: translateY(-10px);
 }
-h5{
-    color:#fff;
+
+h5 {
+    color: #fff;
     text-shadow: 0 0 5px #999;
 }
-.card p{
+
+.card p {
     text-shadow: 0 0 15px #000;
-    font-size:8px;
+    font-size: 8px;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .navbar ul {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .row {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .col {
+        flex-basis: 100%;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    .card {
+        width: 150px;
+        height: 200px;
+        margin: 10px auto;
+    }
+
+    nav ul li {
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .navbar ul {
+        display: none;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .navbar .burger {
+        display: block;
+        cursor: pointer;
+        margin-left: 10px;
+    }
+
+    .burger div {
+        width: 25px;
+        height: 3px;
+        background-color: white;
+        margin: 5px;
+    }
+
+    .navbar .nav-links.active {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    h1 {
+        font-size: 30px;
+    }
+
+    .card {
+        width: 100%;
+        height: auto;
+        margin: 10px 0;
+    }
+
+    .col {
+        flex-basis: 100%;
+        margin-bottom: 20px;
+    }
 }
 
