--- a/style.css
+++ b/style.css
@@ -70,12 +70,12 @@ nav ul li a {
 }
 
 h1 {
-    color: #fff;
-    font-size: 100px;
+    color: #ffffff;
+    font-size: 85px;
 }
 
 p {
-    color: #fff;
+    color: #ffffffda;
     font-size: 15px;
     line-height: 15px;
 }
